--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/gollden-dolar
+spring.datasource.url=jdbc:mysql://localhost/semsar-app
 spring.datasource.username=root
 spring.datasource.password=root
 
